force-app/main/default/objects/Team_Member_History__c/Team_Member_History__c.object-meta.xml
<CustomObject>
    <description>Custom Object to store and display the Account/Opportunity Team Members&#39; history records i.e. when a particular Team Member started and when they got ended.</description>
    <label>Team Member History</label>
    <nameField>
        <label>Team Member History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Member Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>