force-app/main/default/objects/Team_Member_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <inlineHelpText>Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Team Member Histories</relationshipLabel>
    <relationshipName>Team_Member_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>