force-app/main/default/objects/Team_Member_History__c/fields/Blood_Drive_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Blood_Drive_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store the Opportunity related to Team Member</description>
    <label>Blood Drive Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Team Member Histories</relationshipLabel>
    <relationshipName>Team_Member_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>