force-app/main/default/objects/Team_Member_History__c/fields/Is_Covering_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Is_Covering_Recruiter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the Team Member was a Covering Recruiter</description>
    <inlineHelpText>Indicate if the Team Member was a Covering Recruiter</inlineHelpText>
    <label>Is Covering Recruiter</label>
    <type>Checkbox</type>
</CustomField>