force-app/main/default/objects/Team_Member_History__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Field to capture the Role of a Team Member</description>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>